[gd_scene load_steps=6 format=3 uid="uid://bj0447rfnfvpv"]

[ext_resource type="Script" path="res://interface_jogo/interface_jogo.gd" id="1_40nnx"]
[ext_resource type="PackedScene" uid="uid://cl8hd4fyrtkyh" path="res://interface_jogo/interface_padrao/interface_padrao.tscn" id="2_nud58"]
[ext_resource type="PackedScene" uid="uid://dpag6d368xqvo" path="res://interface_jogo/interface_missao/interface_missao.tscn" id="2_s4wmp"]
[ext_resource type="PackedScene" uid="uid://isj1s76o4ek4" path="res://interface_jogo/interface_glossario/interface_glossario.tscn" id="3_8rodc"]
[ext_resource type="PackedScene" uid="uid://21hji81cbghv" path="res://interface_jogo/interface_menu_inicial/interface_menu_inicial.tscn" id="5_l5nfd"]

[node name="InterfaceJogo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40nnx")

[node name="InterfacePadrao" parent="." instance=ExtResource("2_nud58")]
unique_name_in_owner = true
layout_mode = 1

[node name="InterfaceMissao" parent="." instance=ExtResource("2_s4wmp")]
unique_name_in_owner = true
layout_mode = 1

[node name="InterfaceGlossario" parent="." instance=ExtResource("3_8rodc")]
unique_name_in_owner = true
layout_mode = 1

[node name="InterfaceMenuInicial" parent="." instance=ExtResource("5_l5nfd")]
unique_name_in_owner = true
layout_mode = 1
